src/styles/TemplateSection.css
.template-section {
  padding: 32px 32px 8px 32px;
}

.template-section-hdr {
  display: flex;
  justify-items: flex-start;
  align-items: center;
  background-color: #eee;
  font-size: 20px;
  gap: 12px;
  padding: 8px;
}

.template-icon {
  height: 20px;
}

.template-icon img {
  height: 20px;
  width: auto;
}

.template-section-content {
  padding-top: 12px;
}

#template-personal .template-section-content {
  display: grid;
  grid-template-columns: 200px 1fr;
  justify-items: flex-start;
  font-size: 16px;
  row-gap: 8px;
}

#template-personal .template-section-content div:nth-child(2n) {
  font-weight: 700;
}

.template-section li {
  width: 100%;
  display: grid;
  grid-template-columns: auto 1fr;
  font-size: 16px;
  justify-items: flex-start;
  row-gap: 8px;
  column-gap: 20px;
  white-space: pre-line;
}

.template-section li *:nth-child(n + 3) {
  grid-column: span 2;
}

.template-section li *:first-child {
  font-weight: 700;
}

.template-section li *:nth-child(2) {
  justify-self: flex-start;
}

.description {
  text-align: left;
  list-style-type: disc;
}

.description li {
  display: list-item;
  list-style-position: inside;
}

#template-work-exp ul:first-child li *:nth-child(2) {
  justify-self: flex-end;
}

